--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "color.js": "^1.2.0",
     "colorthief": "^2.3.2",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.3",
+    "ipfs-http-client": "^56.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
